# mlperf-storage

./: .gitignore  CLAUDE.md  CODE_IMPROVEMENT_PLAN.md  GITHUB_ISSUES_PLANS.md  IMPLEMENTATION_PLAN.md  README.md  RULES-v3.0.md  Submission_guidelines.md  pyproject.toml  system_configuration.yaml
.github/workflows/: cla.yml  test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-package-management-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-environment-validation-fail-fast/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-RESEARCH.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-kv-cache-benchmark-integration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  (+3 more)
ansible/: setup.yml
docs/: ADDING_BENCHMARKS.md  ARCHITECTURE.md  benchmark_dependency_diagram.md
kv_cache_benchmark/: MLperf v3 KV cache proposal.md  README.md  kv-cache-wrapper.sh  kv-cache.py  kv-cache_sharegpt_replay.py  requirements.txt  sources.md  validate.sh
kv_cache_benchmark/discovery_results_and_analysis/: Recommended Invocations for MLperf v3.md  analyze_iostat.py  analyze_iostat_summary.py  iostat_analysis.csv  iostat_cpu0_comparison.py  mlperf_kvcache_slowsystem.xlsx  mlperf_storage_summary_fast.xlsx  mlperfv3_results_and_metrics_discovery.md  mlperfv3_results_summary_1page.md
kv_cache_benchmark/tests/: test_kv_cache.py
kv_cache_benchmark/utils/: discovery.sh  discovery_sharegpt.sh  json_to_xlsx.py  validate_lmcache.sh
kv_cache_benchmark/vllm_lmcache_validate/: validation_results.md
mlpstorage/: cli.py  cli_parser.py  cluster_collector.py  config.py  dependency_check.py  error_messages.py  errors.py  history.py  main.py  mlps_logging.py  progress.py  registry.py  report_generator.py  reporting.py  rules.py  rules_legacy.py  utils.py  validation_helpers.py
mlpstorage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mlpstorage/benchmarks/: __init__.py  base.py  dlio.py  kvcache.py  vectordbbench.py
mlpstorage/cli/: __init__.py  checkpointing_args.py  common_args.py  kvcache_args.py  lockfile_args.py  training_args.py  utility_args.py  vectordb_args.py
mlpstorage/environment/: __init__.py  install_hints.py  os_detect.py  validators.py
mlpstorage/interfaces/: __init__.py  benchmark.py  collector.py  validator.py
mlpstorage/lockfile/: __init__.py  generator.py  models.py  validator.py
mlpstorage/reporting/: __init__.py  advanced_collector.py  directory_validator.py  formatters.py
mlpstorage/rules/: __init__.py  base.py  issues.py  models.py  utils.py  verifier.py
mlpstorage/tests/: __init__.py  test_benchmarks.py  test_cluster_collector.py  test_rules.py
mlpstorage_test_results/: results.csv  results.json
plans/: architecture_analysis.md
test/: run_tests.sh  verify_run.py
tests/: conftest.py  test_reporting_formats.py
tests/fixtures/: __init__.py  mock_collector.py  mock_executor.py  mock_logger.py  sample_data.py
tests/integration/: test_benchmark_flow.py  test_full_submission.py
tests/unit/: test_benchmark_run.py  test_benchmarks_base.py  test_benchmarks_kvcache.py  test_benchmarks_vectordb.py  test_cli.py  test_cli_kvcache.py  test_cli_vectordb.py  test_cluster_collector.py  test_config.py  test_dependency_check.py  test_environment.py  test_history.py  test_imports.py  test_progress.py  test_reporting.py  test_rules_calculations.py  test_rules_checkers.py  test_rules_dataclasses.py  test_rules_extractors.py  test_rules_vectordb.py  test_utils.py  test_validation_helpers.py
vdbtools/: README.md  compact_and_watch.py  config.yml  docker-compose.yml  insert_data.py  load_vdb.py  main.py  search_benchmark.py  setup_milvus.py  simple-bench.py  watch_index_build.py  workloads.yml
(+1094 files in other folders)
