[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpstorage"
version = "2.0.0b1"
description = "MLPerf Storage Benchmark Suite"
readme = "README.md"
authors = [
    {name = "MLCommons Storage Working Group"}
]
requires-python = ">=3.10.0"
dependencies = [
    "psutil>=5.9",
    "pyarrow",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dlio = [
    "dlio-benchmark @ git+https://github.com/argonne-lcf/dlio_benchmark.git@mlperf_storage_v2.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]
# Excel report generation support
excel = [
    "openpyxl>=3.0.0",
]
# Full installation with DLIO for running benchmarks
full = [
    "dlio-benchmark @ git+https://github.com/argonne-lcf/dlio_benchmark.git@mlperf_storage_v2.0",
]
# All reporting features including Excel
reporting = [
    "openpyxl>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/mlcommons/storage"
"Bug Tracker" = "https://github.com/mlcommons/storage/issues"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
"mlpstorage" = ["../configs/dlio/workload/*.yaml"]

[project.scripts]
mlpstorage = 'mlpstorage.main:main'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["mlpstorage"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]